# Jax_ACT

./: .gitignore  main.py  pyproject.toml  python
src/: act_model_flax.py  dataloader_jax.py  resnet_encoder_flax.py  sanity_control.py  smoke_dataset.py  train_act.py
