[project]
name = "jax-act"
version = "0.1.0"
description = "ACT (Action Chunking Transformer) training with JAX+Flax"
dependencies = [
    "jax[cuda12_pip]>=0.4.30",
    "flax>=0.8.2",
    "optax>=0.2.2",
    "tensorflow-datasets>=4.9.5",
    "einops>=0.8.0",
    "matplotlib",
    "ml-collections",
    "tqdm",
]
